--- a/app/src/main/res/layout/activity_low_choice_song.xml
+++ b/app/src/main/res/layout/activity_low_choice_song.xml
@@ -6,24 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    tools:context=".LowChoiceSong">
+    tools:context=".MiddleChoiceSong">
 
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="501dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="536dp"
-        android:background="@drawable/buttonblack"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/song_button2"
-        app:layout_constraintTop_toBottomOf="@+id/song_plane" />
+    <Button
+        android:id="@+id/backtochoice"
+        android:layout_width="70dp"
+        android:layout_height="51dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="@+id/odsfirstscore"
+        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
     <Button
         android:id="@+id/song_plane"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="52dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -32,17 +32,46 @@
         android:text="@string/strBtn1"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_width="501dp"
+        android:layout_height="57dp"
+        android:background="@drawable/buttonblack"
+        app:layout_constraintBottom_toTopOf="@+id/song_middle3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.588"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/song_plane"
+        app:layout_constraintVertical_bias="0.918" />
+
     <Button
-        android:id="@+id/song_button2"
+        android:id="@+id/song_middle3"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginBottom="533dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
+        android:fontFamily="@font/scdream2"
+        android:paddingLeft="40dp"
+        android:text="@string/strBtn2"
+        android:textSize="20dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/song_middle2" />
+
+    <Button
+        android:id="@+id/song_middle2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -51,59 +80,10 @@
         android:text="@string/strBtn2"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/song_button3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
-        android:background="?selectableItemBackground"
-        android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
-        android:fontFamily="@font/scdream2"
-        android:paddingLeft="40dp"
-        android:text="@string/strBtn3"
-        android:textSize="20dp"
-        android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <!--    <Button-->
-    <!--        android:id="@+id/backtolevel"-->
-    <!--        android:layout_width="70dp"-->
-    <!--        android:layout_height="51dp"-->
-    <!--        android:background="?selectableItemBackground"-->
-    <!--        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"-->
-    <!--        android:theme="@style/AppTheme.BlueRipple"-->
-    <!--        app:layout_constraintHorizontal_chainStyle="packed"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/textView2" />-->
-    <!--
-    <CheckBox
-        android:id="@+id/woman"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="62dp"
-        android:layout_marginBottom="32dp"
-        android:text="여자"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <CheckBox
-        android:id="@+id/man"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="32dp"
-        android:text="남자"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/woman" />
-        -->
+        app:layout_constraintTop_toBottomOf="@+id/song_plane" />
 
     <TextView
         android:id="@+id/textView2"
@@ -117,7 +97,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/radioGroup"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/song_button2" /> />
+        app:layout_constraintTop_toBottomOf="@+id/song_button2" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
