--- a/app/src/main/res/layout/activity_part_practice_plane1.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane1.xml
@@ -215,7 +215,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="23dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="200dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
@@ -224,8 +224,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/last"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
-        app:layout_constraintTop_toBottomOf="@+id/planefirstscore"
+        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
         app:layout_constraintVertical_bias="0.768"
         app:srcCompat="@android:drawable/ic_media_next" />
 
