--- a/app/src/main/res/layout/activity_part_practice_plane4.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane4.xml
@@ -221,7 +221,7 @@
         app:layout_constraintEnd_toStartOf="@+id/next"
         app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/planefourthscore"
+        app:layout_constraintTop_toBottomOf="@+id/planethirdscore"
         app:layout_constraintVertical_bias="0.77" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
