--- a/app/src/main/res/layout/activity_choice_level.xml
+++ b/app/src/main/res/layout/activity_choice_level.xml
@@ -51,8 +51,22 @@
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBottom_toTopOf="@+id/levellow"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backtochoice" />
+
+    <ImageView
+        android:layout_width="524dp"
+        android:layout_height="220dp"
+        android:background="@drawable/buttonblack"
+        app:layout_constraintBottom_toTopOf="@+id/levellow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/levelhigh"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/levelmiddle"
@@ -69,7 +83,9 @@
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBottom_toBottomOf="@+id/levellow"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/levelhigh" />
+        app:layout_constraintTop_toTopOf="@+id/levelhigh"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
