--- a/app/src/main/res/layout/activity_high_choice_song.xml
+++ b/app/src/main/res/layout/activity_high_choice_song.xml
@@ -92,6 +92,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="41dp"
+        android:fontFamily="@font/scdream2"
         android:text="음역대 선택"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -112,14 +113,16 @@
 
         <RadioButton
             android:id="@+id/man"
-            android:layout_width="73dp"
+            android:layout_width="78dp"
             android:layout_height="match_parent"
+            android:fontFamily="@font/scdream2"
             android:text="남자" />
 
         <RadioButton
             android:id="@+id/woman"
             android:layout_width="71dp"
             android:layout_height="match_parent"
+            android:fontFamily="@font/scdream2"
             android:text="여자" />
     </RadioGroup>
 
