--- a/app/src/main/res/layout/activity_low_choice_song.xml
+++ b/app/src/main/res/layout/activity_low_choice_song.xml
@@ -93,6 +93,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="41dp"
         android:text="음역대 선택"
+        android:fontFamily="@font/scdream2"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/radioGroup"
@@ -114,12 +115,14 @@
             android:id="@+id/man"
             android:layout_width="73dp"
             android:layout_height="match_parent"
+            android:fontFamily="@font/scdream2"
             android:text="남자" />
 
         <RadioButton
             android:id="@+id/woman"
             android:layout_width="71dp"
             android:layout_height="match_parent"
+            android:fontFamily="@font/scdream2"
             android:text="여자" />
     </RadioGroup>
 
