자잘한 오류 수정

--- a/app/src/main/res/layout/activity_part_practice_bear1.xml
+++ b/app/src/main/res/layout/activity_part_practice_bear1.xml
@@ -171,6 +171,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="에"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
