--- a/app/src/main/res/layout/activity_part_practice_plane2.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane2.xml
@@ -142,6 +142,7 @@
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="라"
+        android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton3"
