--- a/app/src/main/res/layout/activity_choice_level.xml
+++ b/app/src/main/res/layout/activity_choice_level.xml
@@ -39,10 +39,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginBottom="220dp"
+        android:layout_width="411dp"
+        android:layout_height="196dp"
         android:background="@drawable/buttonblack"
         app:layout_constraintBottom_toBottomOf="@+id/levellow"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,8 +49,8 @@
 
     <Button
         android:id="@+id/levelmiddle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="411dp"
+        android:layout_height="192dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_musical_note_126493"
         android:fontFamily="@font/scdream2"
@@ -78,6 +76,7 @@
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/levelmiddle" />
 
