--- a/app/src/main/res/layout/activity_middle_choice_song.xml
+++ b/app/src/main/res/layout/activity_middle_choice_song.xml
@@ -10,14 +10,16 @@
 
     <Button
         android:id="@+id/backtochoice"
-        android:layout_width="70dp"
-        android:layout_height="51dp"
+        android:layout_width="43dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="2dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="@+id/odsfirstscore"
-        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
+        app:layout_constraintBottom_toTopOf="@+id/levelhigh"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/song_bear"
@@ -38,23 +40,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="501dp"
-        android:layout_height="57dp"
+        android:layout_width="411dp"
+        android:layout_height="50dp"
         android:background="@drawable/buttonblack"
         app:layout_constraintBottom_toTopOf="@+id/song_middle3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/song_bear"
-        app:layout_constraintVertical_bias="0.918" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/song_middle3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
@@ -69,9 +69,8 @@
 
     <Button
         android:id="@+id/song_middle2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_width="411dp"
+        android:layout_height="50dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_free_icon_diamond_636600"
         android:fontFamily="@font/scdream2"
