--- a/app/src/main/res/layout/activity_part_practice_ods7.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods7.xml
@@ -11,26 +11,29 @@
     <Button
         android:id="@+id/playVib"
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="1dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toBottomOf="@+id/backtochoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backtochoice"
-        app:layout_constraintTop_toTopOf="@+id/odsseventhscore" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/backtochoice"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="271dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toBottomOf="@+id/playVib"
         app:layout_constraintEnd_toStartOf="@+id/playVib"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/odsseventhscore" />
 
 
     <ImageView
@@ -39,14 +42,14 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:src="@drawable/odsseventhscore"
-        app:layout_constraintStart_toStartOf="@+id/backtochoice"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/pitchButton1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="39dp"
         android:layout_marginEnd="1dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
@@ -55,81 +58,82 @@
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton2"
-        app:layout_constraintStart_toStartOf="@+id/pitchbutton6"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/odsseventhscore" />
 
     <Button
         android:id="@+id/pitchbutton2"
-        android:layout_width="65dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
-        android:layout_marginEnd="65dp"
+        android:layout_marginEnd="11dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="수"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
-        app:layout_constraintEnd_toEndOf="@+id/pitchbutton3"
-        app:layout_constraintStart_toStartOf="@+id/pitchbutton6" />
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
+        app:layout_constraintStart_toEndOf="@+id/pitchButton1"
+        app:layout_constraintTop_toBottomOf="@+id/odsseventhscore" />
 
     <Button
         android:id="@+id/pitchbutton3"
-        android:layout_width="65dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="1dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="하"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintEnd_toEndOf="@+id/odsseventhscore"
-        app:layout_constraintStart_toStartOf="@+id/odsseventhscore"
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton4"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton2"
         app:layout_constraintTop_toBottomOf="@+id/odsseventhscore" />
 
     <Button
         android:id="@+id/pitchbutton4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="-"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton3"
-        app:layout_constraintEnd_toEndOf="@+id/pitchbutton8"
-        app:layout_constraintStart_toEndOf="@+id/pitchbutton3" />
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton5"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton3"
+        app:layout_constraintTop_toBottomOf="@+id/odsseventhscore" />
 
     <Button
         android:id="@+id/pitchbutton5"
-        android:layout_width="65dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginEnd="30dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="러"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintStart_toEndOf="@+id/pitchbutton8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pitchbutton4"
         app:layout_constraintTop_toBottomOf="@+id/odsseventhscore" />
 
     <Button
         android:id="@+id/pitchbutton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
+        android:layout_marginEnd="11dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
         android:text="왔"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBaseline_toBaselineOf="@+id/pitchbutton7"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/pitchbutton7"
+        app:layout_constraintTop_toBottomOf="@+id/pitchButton1" />
 
     <Button
         android:id="@+id/pitchbutton7"
@@ -163,7 +167,7 @@
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="22dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="50sp"
@@ -206,16 +210,16 @@
     <ImageButton
         android:id="@+id/next"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="23dp"
-        android:layout_marginBottom="266dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
         android:scaleType="fitCenter"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/last"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/last"
+        app:layout_constraintTop_toTopOf="@+id/last"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageButton
