--- a/app/src/main/res/layout/activity_part_practice_ods1.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods1.xml
@@ -11,26 +11,30 @@
     <Button
         android:id="@+id/playVib"
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="1dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toBottomOf="@+id/backtochoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backtochoice"
-        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/backtochoice"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="271dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toBottomOf="@+id/playVib"
         app:layout_constraintEnd_toStartOf="@+id/playVib"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
 
     <ImageView
@@ -39,7 +43,7 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:src="@drawable/odsfirstscore"
-        app:layout_constraintStart_toStartOf="@+id/backtochoice"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -161,7 +165,7 @@
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="22dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="50sp"
@@ -205,8 +209,8 @@
         android:id="@+id/next"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="266dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="265dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
         android:scaleType="fitCenter"
