--- a/app/src/main/res/layout/activity_part_practice_ods3.xml
+++ b/app/src/main/res/layout/activity_part_practice_ods3.xml
@@ -11,26 +11,29 @@
     <Button
         android:id="@+id/playVib"
         android:layout_width="0dp"
-        android:layout_height="51dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="1dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toBottomOf="@+id/backtochoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backtochoice"
-        app:layout_constraintTop_toTopOf="@+id/odsthirdscore" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/backtochoice"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="271dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toBottomOf="@+id/playVib"
         app:layout_constraintEnd_toStartOf="@+id/playVib"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/odsthirdscore" />
 
 
     <ImageView
@@ -39,7 +42,7 @@
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:src="@drawable/odsthirdscore"
-        app:layout_constraintStart_toStartOf="@+id/backtochoice"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -161,7 +164,7 @@
         android:id="@+id/pitchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="22dp"
         android:text=""
         android:textColor="#000000"
         android:textSize="50sp"
@@ -204,16 +207,16 @@
     <ImageButton
         android:id="@+id/next"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="23dp"
-        android:layout_marginBottom="266dp"
         android:background="?selectableItemBackground"
         android:onClick="onClick_next"
         android:scaleType="fitCenter"
         android:tint="#9C27B0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/last"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/last"
+        app:layout_constraintTop_toTopOf="@+id/last"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageButton
