--- a/app/src/main/res/layout/activity_part_practice_plane2.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane2.xml
@@ -12,27 +12,30 @@
     <Button
         android:id="@+id/playVib"
         android:layout_width="0dp"
-        android:layout_height="51dp"
-        android:layout_marginEnd="7dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="1dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_telephone"
         android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintBottom_toBottomOf="@+id/backtochoice"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backtochoice"
-        app:layout_constraintTop_toTopOf="@+id/planesecondscore" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/backtochoice"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="264dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="290dp"
         android:background="?selectableItemBackground"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:theme="@style/AppTheme.BlueRipple"
-        app:layout_constraintBottom_toBottomOf="@+id/playVib"
         app:layout_constraintEnd_toStartOf="@+id/playVib"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/odsfirstscore" />
 
     <ImageView
         android:id="@+id/planesecondscore"
